Y'm work enter two numbers and write in the result field

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Calculate</string>
+
+    <string name="numberOne">Number one</string>
+    <string name="numberTwo">Number two</string>
+    <string name="action">Action</string>
+    <string name="result">Result</string>
+
 </resources>
