--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="result">Result</string>
     <string name="reset">Reset</string>
 
+    <string name="writeNumberOne">Writing number one</string>
+    <string name="writeNumberTwo">Writing number two</string>
+
 </resources>
